--- a/src/main/resources/templates/externaldispatches/externaldispatch-list.html
+++ b/src/main/resources/templates/externaldispatches/externaldispatch-list.html
@@ -23,7 +23,7 @@
 
     <br>
 
-    <h3 th:text="#{externaldispatches.headline}">List of External dispatches</h3>
+    <h3 class="font-weight-bold text-secondary" th:text="#{index.section.externaldispatches}">External dispatches</h3>
 
     <hr>
 
