--- a/src/main/resources/templates/internaldispatches/internaldispatch-album-handler-form.html
+++ b/src/main/resources/templates/internaldispatches/internaldispatch-album-handler-form.html
@@ -24,7 +24,7 @@
 
     <br>
 
-    <h3 th:text="#{albumDirectory}">Album Directory</h3>
+    <h3 class="font-weight-bold text-secondary" th:text="#{albums}">Albums</h3>
 
     <hr>
 
