--- a/src/main/resources/templates/internaldispatches/internaldispatch-list.html
+++ b/src/main/resources/templates/internaldispatches/internaldispatch-list.html
@@ -23,7 +23,7 @@
 
     <br>
 
-    <h3 th:text="#{internaldispatches.headline}">List of Internal dispatches</h3>
+    <h3 class="font-weight-bold text-secondary" th:text="#{index.section.internaldispatches}">Internal dispatches</h3>
 
     <hr>
 
