--- a/src/main/resources/templates/users/user-form.html
+++ b/src/main/resources/templates/users/user-form.html
@@ -25,7 +25,7 @@
 
         <br><br>
 
-        <h3 th:text="#{userDirectory}">User Directory</h3>
+        <h3 class="font-weight-bold text-secondary" th:text="#{users}">Users</h3>
 
         <hr>
 
