--- a/src/main/resources/templates/users/user-update-form.html
+++ b/src/main/resources/templates/users/user-update-form.html
@@ -23,11 +23,11 @@
 
         <br><br>
 
-        <h3 th:text="#{userDirectory}">User Directory</h3>
+        <h3 class="font-weight-bold text-secondary" th:text="#{users}">Users</h3>
 
         <hr>
 
-        <p class="h4 mb-3 offset-sm-3" th:text="#{userCard}">User Card</p>
+        <p class="h4 font-weight-bolder font-italic mb-4 offset-sm-4" th:text="#{userCard}">User Card</p>
 
         <form class="form-horizontal" th:object="${user}" th:action="@{/users/updateWithoutPassword}" method="post">
 
