--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -117,6 +117,11 @@ img {
 .width-60px {
     width: 60px !important;
 }
+
+.width-70px {
+    width: 70px !important;
+}
+
 .font-15px {
     font-size: 15px;
 }
