--- a/src/main/resources/templates/externaldispatches/externaldispatch-form.html
+++ b/src/main/resources/templates/externaldispatches/externaldispatch-form.html
@@ -23,11 +23,11 @@
 
     <br>
 
-    <h3 th:text="#{externalDispatchDirectory}">External dispatch Directory</h3>
+    <h3 class="font-weight-bold text-secondary" th:text="#{index.section.externaldispatches}">External dispatches</h3>
 
     <hr>
 
-    <p class="h4 mb-3 offset-sm-3" th:text="#{externalDispatchCard}">External dispatch card</p>
+    <p class="h4 font-weight-bolder font-italic mb-4 offset-sm-4" th:text="#{externalDispatchCard}">External dispatch card</p>
 
     <form class="form-horizontal" th:object="${externalDispatch}" th:action="@{/externaldispatches/save}" method="post">
 
@@ -38,8 +38,8 @@
         <input type="hidden" th:field="*{id}">
 
         <div class="row mb-3">
-            <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                <h6 th:text="#{waybill} + ':'">Waybill:</h6>
+            <div class="col-sm-3 form-control-plaintext offset-sm-1">
+                <h6 class="font-weight-bold pull-right" th:text="#{waybill} + ':'">Waybill:</h6>
             </div>
             <div class="col-sm-5">
                 <input type="text" th:field="*{waybill}" th:class="${#fields.hasErrors('waybill')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="#{waybill}"/>
@@ -52,8 +52,8 @@
         </div>
 
         <div class="row mb-3">
-            <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                <h6 th:text="#{dispatchDate} + ':'">Dispatch date:</h6>
+            <div class="col-sm-3 form-control-plaintext offset-sm-1">
+                <h6 class="font-weight-bold pull-right" th:text="#{dispatchDate} + ':'">Dispatch date:</h6>
             </div>
             <div class="col-sm-5">
                 <input type="date" th:field="*{dispatchDate}" th:class="${#fields.hasErrors('dispatchDate')} ? 'form-control is-invalid' : 'form-control'"/>
@@ -66,7 +66,7 @@
         </div>
 
         <div class="row mb-3">
-            <div class="col-sm-2 form-control-plaintext offset-sm-1">
+            <div class="col-sm-3 form-control-plaintext offset-sm-1">
                 <h6 class="font-weight-bold pull-right" th:text="#{status} + ':'">Status:</h6>
             </div>
             <div class="col-sm-5">
@@ -86,8 +86,8 @@
         </div>
 
         <div class="row mb-3">
-            <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                <h6 th:text="#{remark} +':'">Remark:</h6>
+            <div class="col-sm-3 form-control-plaintext offset-sm-1">
+                <h6 class="font-weight-bold pull-right" th:text="#{remark} +':'">Remark:</h6>
             </div>
             <div class="col-sm-5">
                 <input type="text" th:field="*{remark}" th:class="${#fields.hasErrors('remark')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="#{remark}"/>
@@ -100,8 +100,8 @@
         </div>
 
         <div class="row mb-3">
-            <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                <h6 th:text="#{letterOutgoingNumber} + ':'">Letter outgoing number:</h6>
+            <div class="col-sm-3 form-control-plaintext offset-sm-1">
+                <h6 class="font-weight-bold pull-right" th:text="#{letterOutgoingNumber} + ':'">Letter outgoing number:</h6>
             </div>
             <div class="col-sm-5">
                 <input type="text" th:field="*{letterOutgoingNumber}" th:class="${#fields.hasErrors('letterOutgoingNumber')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="#{letterOutgoingNumber}"/>
@@ -114,8 +114,8 @@
         </div>
 
         <div class="row mb-3">
-            <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                <h6 th:text="#{company} + ':'">Company:</h6>
+            <div class="col-sm-3 form-control-plaintext offset-sm-1">
+                <h6 class="font-weight-bold pull-right" th:text="#{company} + ':'">Company:</h6>
             </div>
             <div class="col-sm-5">
                 <select class="form-control selectpicker" th:field="*{company}">
@@ -134,7 +134,7 @@
         </div>
 
         <div class="row">
-            <button type="submit" class="btn-sm btn-primary offset-7" th:text="#{${externalDispatch.isNew() ? 'create'  : 'update'}}">Save</button>
+            <button type="submit" class="btn-sm btn-primary offset-8" th:text="#{${externalDispatch.isNew() ? 'create'  : 'update'}}">Save</button>
         </div>
 
         <br><br>
