Add cosmetic fixes to html pages

--- a/src/main/resources/templates/companies/company-info.html
+++ b/src/main/resources/templates/companies/company-info.html
@@ -60,8 +60,8 @@
             </div>
         </div>
 
-        <div class="row px-5" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')">
-            <div class="col-sm-3">
+        <div class="row px-3" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_OTD_WORKER')">
+            <div class="col-sm-3 m-2">
 
             </div>
             <div class="col-sm-4 text-right">
